[gd_scene load_steps=2 format=3 uid="uid://sh4radtsms63"]

[ext_resource type="Script" uid="uid://b6ikot5knr15h" path="res://setup_test.gd" id="1_rtjpe"]

[node name="SetupTest" type="Node2D"]
script = ExtResource("1_rtjpe")

[node name="BotaoServidor" type="Button" parent="."]
offset_left = 201.0
offset_top = 231.0
offset_right = 353.0
offset_bottom = 276.0
text = "Iniciar Servidor"

[node name="BotaoCliente" type="Button" parent="."]
offset_left = 200.0
offset_top = 303.0
offset_right = 358.0
offset_bottom = 344.0
text = "Iniciar Cliente"

[node name="BotaoCriarSala" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Criar Sala (Teste)"

[connection signal="pressed" from="BotaoServidor" to="." method="_on_botao_servidor_pressed"]
[connection signal="pressed" from="BotaoCliente" to="." method="_on_botao_cliente_pressed"]
[connection signal="pressed" from="BotaoCriarSala" to="." method="_on_botao_criar_sala_pressed"]
